# taocp_exercises

./: CMakeLists.txt
src/: s1_1_E_euclid_gcd.cpp
